--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 joblib==1.3.2
-numpy==1.26.0
-pandas==2.1.1
+numpy==1.24.4
+pandas==2.0.3
+PyQt5==5.15.9
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
 scikit-learn==1.3.1
-scipy==1.11.2
+scipy==1.10.1
 segyio==1.9.11
 six==1.16.0
 threadpoolctl==3.2.0
